syntax = "proto3";
package service;

option go_package = "protocols/user";

import "api-models.proto";

// UserService is
service UserService {
    rpc CreateUser(models.User) returns(UserEmpty);

    rpc CheckAuth(TokenRequest) returns(models.User);
    rpc UserBy(UserGetter) returns(models.User);

    rpc UpdateUser(UpdateUserRequest) returns(models.User);
    rpc SignUp(SignUpRequest) returns(TokenResponse);
    // SignInRequest
    rpc SignIn(SignInRequest) returns(TokenResponse);

}

message UpdateUserRequest {
    bytes   user_uuid        = 1;
    string  email       = 2;
    string  username     = 3;
    string  first_name    = 4;
    string  last_name    = 5;
    string  avatar      = 6;
}

// SignUpRequest is
message SignUpRequest {
    string  email       = 1;
    bytes   password    = 2;
    int64    user_type    = 3;
}

// SignInRequest is
message SignInRequest {
    string  email       = 1;
    bytes   password    = 2;
}
message UserEmpty {}

message TokenRequest {
    bytes   token   = 1;
}

// TokenResponse is response with session JWT
message TokenResponse {
    bytes   token   = 1;
}

message UserGetter {
    oneof getter {
        bytes   user_uuid    = 1;
        string  email   = 2;
    }
}